[package]
name = "janu-flow-python-types"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
janu-flow = { git = "https://github.com/virtuehive/janu-flow.git", branch = "main" }
uhlc = { version = "0.3"}
pyo3 = "0.14.5"
